--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	</header>
 	<div class="panel">
 		<h1 id="unlock_room_title" class="simple_label"></h1>
-		This is a batcave, a secret chatroom.  To unlock it and see the messages and who's inside, you're going to need to <span id="remaining_requirements" class="simple_label"></span>.
+		This us the door to a secret chatroom.  To unlock it and see the messages and who's inside, you're going to need to <span id="remaining_requirements" class="simple_label"></span>.
 	</div>
 	<div class="panel">
 		<button id="next_step_button" class="simple_button">Next step</button>
