--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Batcave</title>
+<title>Many Secret Doors</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
