--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 
 <div class="page" id="rooms">
 	<header>
-		<button class="simple_button header_back_button" id="rooms_check_loc"><img src="/img/whitelocate.png"></button>
-		<button class="simple_button header_right_button" id="room_create"><big>+</big></button>
+		<button class="simple_button" id="rooms_back">back</button>
+		<h1 class="expando">Many Secret Doors</h1>
+		<button class="simple_button" id="room_create"><big>+</big></button>
 		<a style="float:right; color: #82E5E9;" href="#" id="login">FB login</a>
 	</header>
+	<h3 class="simple_hidable" id="backlink_header">Pick a room to link to</h3>
+	<button class="simple_button header_back_button" id="rooms_check_loc"><img src="/img/whitelocate.png"></button>
 	<div class="white panel centered fbobjlist" id="rooms_list">
 		<div class="room_card">
 			<div class="room_tile">
