--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 		<span class="label">unlocked</span>
 	</div>
 	<div class="player row panel simple_hidable">
-		<button class="simple_button" id="room_rewind">Rewind</button>
-		<button class="simple_button expando" id="room_play">Play</button>
+		<button class="simple_button" id="room_rewind"><img src='/img/rew.png'></button>
+		<button class="simple_button expando" id="room_play"><img src='/img/play.png'></button>
 	</div>
 	<div class="people panel fbobjlist" id="room_members">
 		<img data-set="src:photo_url">
@@ -132,9 +132,9 @@
 	</header>
 
 	<div class="player row panel simple_hidable">
-		<button class="simple_button" id="room_settings_rewind">Rewind</button>
-		<button class="simple_button expando" id="room_settings_play">Play</button>
-		<button class="simple_button" id="room_settings_next">Next</button>
+		<button class="simple_button" id="room_settings_rewind"><img src='/img/rew.png'></button>
+		<button class="simple_button expando" id="room_settings_play"><img src='/img/play.png'></button>
+		<button class="simple_button" id="room_settings_next"><img src='/img/ff.png'></button>
 	</div>
 
 	<form class="panel row">
