--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 	</header>
 	<div class="panel simple_button" id="edit_settings">
 		<h2 id="room_title" class="simple_label"></h2>
-		<span id="room_requires" class="simple_label"></span>
-		<span class="label">unlocked</span>
+		<span class="label">unlocked <span id="room_requires" class="simple_label"></span></span>
 	</div>
 	<div class="player row panel simple_hidable">
 		<button class="simple_button" id="room_rewind"><img src='/img/rew.png'></button>
