clean up room header

--- a/index.html
+++ b/index.html
@@ -97,24 +97,36 @@
 <div class="page" id="show_room">
 	<header>
 		<button id="go_rooms" class="header_back_button simple_button"><big>&larr;</big></button>
-		<button id="go_backlinks" class="header_right_button simple_button">Links</button>
+		<h1 class="simple_button" id="edit_settings">
+			<span id="room_title" class="simple_label"></span>
+			<small id="room_member_names" class="simple_label"></small>
+		</h1>
+		<button class="header_right_button">
+			<span id="room_requires" class="simple_label"></span>
+		</button>
 	</header>
-	<div class="panel simple_button" id="edit_settings">
-		<h2 id="room_title" class="simple_label"></h2>
-		<span class="label">unlocked <span id="room_requires" class="simple_label"></span></span>
-	</div>
 	<div class="player row panel simple_hidable">
 		<button class="simple_button" id="room_rewind"><img src='/img/rew.png'></button>
-		<button class="simple_button expando" id="room_play"><img src='/img/play.png'></button>
+		<div id="room_song_title" class="simple_label expando"></div>
+		<button class="simple_button expando" id="room_play">
+			<img id="room_play_indicator" src='/img/play.png'>
+		</button>
 	</div>
-	<div class="people panel fbobjlist" id="room_members">
-		<img data-set="src:photo_url">
-	</div>
-	<div id="room_messages" class="expando fbobjlist">
-		<div class="message">
-			<b data-set="text:author_name"></b>
-			<i data-set="text:text"></i>
-			<span class="action" data-set="text:action"></span>
+	<div id="room_scrolly_section" class="expando">
+		<div id="room_backlinks_div" class="simple_button">
+			<b id="room_backlinks_count" class="simple_label"></b> rooms link to here &raquo;
+		</div>
+
+		<div id="room_author_note" class="simple_button message">
+			This is your room.  <span class="action">Make challenges for those who want to join &raquo;</span>
+		</div>
+
+		<div id="room_messages" class="expando fbobjlist">
+			<div class="message">
+				<b data-set="text:author_name"></b>
+				<i data-set="text:text"></i>
+				<span class="action" data-set="text:action"></span>
+			</div>
 		</div>
 	</div>
 	<form class="panel row">
