realtime distance displays on homescreen and unlock page

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 	<div class="panel">
 		<button id="next_step_button" class="simple_button"><span id="button_label" class="simple_label">Next step</span></button>
 		<div id="unlock_status_div"></div>
+		<div id="distance_div"></div>
 	</div>
 </div>
 
