--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="room_tile">
 				<i data-set="text:distance_and_direction"></i>
 				<span data-set="text:indicator"></span>
-				<b data-set="text:title"></b>
+				<b data-set="text:guardedtitle"></b>
 			</div>
 			<div class="members_text" data-set="text:members_text"></div>
 		</div>
