--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 	</div>
 	<div class="info panel">
 		<b>Many Secret Doors</b> is a place to make secret rooms.
-		If you make a room, the only people who can join it are those who visit a particular spot,
-		or who listen to a song you choose,
-		or who can answer a riddle.
+      When you make a room, you get to decide what people have to do to enter it.
+		Perhaps they have to visit a particular spot, or listen to some audio,
+      or answer a question correctly.
 
-		<p>You can connect the rooms together to make scavenger hunts, playlists, secret clubs... whatever you're into.</p>
+		<p>By linking rooms together, you can design scavenger hunts,
+      playlists, secret clubs, or any kind of place-based experience.</p>
 	</div>
 	<div class="panel">
 		<button class="simple_button" id="go_nearby">Show nearby rooms</button>
